Fixed overlap of button and image through media queries and changed position of p and img

--- a/css/styles.css
+++ b/css/styles.css
@@ -127,10 +127,9 @@ img {
   box-shadow: var(--box-shadow);
   color: var(--secondary-color);
 }
-.container {
-  max-width: 1320px;
+.project-description {
+  margin-top: 100px;
 }
-
 .tango-image {
   padding: 10px;
   border: 5px solid var(--primary-color);
@@ -166,6 +165,12 @@ img {
   p {
     text-align: center;
   }
+  img {
+    margin-top: 50px;
+  }
+  .container {
+    grid-template-columns: 1fr 2fr;
+  }
   .paragraph-link {
     text-align: center;
   }
@@ -177,6 +182,9 @@ img {
   }
   .email-link {
     font-size: 18px;
+  }
+  .project-description {
+    margin-top: 0px;
   }
 }
 @media (max-width: 390px) {
@@ -209,5 +217,8 @@ img {
   }
   .btn-contact-link {
     font-size: 13px;
+  }
+  .project-description {
+    margin-top: 0px;
   }
 }
